--- a/sentinel-backend/package.json
+++ b/sentinel-backend/package.json
@@ -12,7 +12,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@tensorflow/tfjs-node": "^4.22.0",
     "chalk": "^5.4.1",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
@@ -20,6 +19,7 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.0.0",
+    "mongoose": "^8.12.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.33.5"
